--- a/arranjos.html
+++ b/arranjos.html
@@ -15,7 +15,7 @@
         <h3></br>
             <table width="600" bgcolor="">
             <tr>
-            <td><font color="red"><a href="home.html"> Home </a></font></td>
+            <td><font color="red"><a href="index.html"> Home </a></font></td>
             <TD> <font color="red"><a href="promocoes.html"> Promoções</a></font></TD>
                <TD> <font color="red"><a href="kits.html"> Kits</a></font></TD>
                <td> <font color="red"><a href="arranjos.html"> Arranjos </a></font></td>
