--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <td align="center">
                 <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
             <h1>Opções</h1>
-            <li align="center"> <a href="home.html "> Home </a> </li>
+            <li align="center"> <a href="index.html "> Home </a> </li>
             <li align="center"> <a href="promocoes.html"> Promoções</a> </li>
             <li align="center"> <a href="kits.html "> kits </a> </li>
             <li align="center"> <a href="arranjos.html "> Arranjos</a> </li>
