--- a/maisvendidas.html
+++ b/maisvendidas.html
@@ -14,7 +14,7 @@
         <table width="600" bgcolor="">
             <tr>
                 <td>
-                    <font color="red"><a href="home.html"> Home </a></font>
+                    <font color="red"><a href="index.html"> Home </a></font>
                 </td>
                 <td>
                     <font color="red"><a href="promocoes.html"> Promoções</a></font>
