--- a/maisvendidas.html
+++ b/maisvendidas.html
@@ -26,7 +26,7 @@
                     <font color="red"><a href="arranjos.html"> Arranjos </a></font>
                 </td>
                 <td>
-                    <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font>
+                    <font color="red"><a href="tiposdeflores.html"> Tipos </a></font>
                 </td>
                 <td>
                     <font color="red"><a href="maisvendidas.html"> Mais Vendidas </a></font>
