--- a/arranjos.html
+++ b/arranjos.html
@@ -19,7 +19,7 @@
             <TD> <font color="red"><a href="promocoes.html"> Promoções</a></font></TD>
                <TD> <font color="red"><a href="kits.html"> Kits</a></font></TD>
                <td> <font color="red"><a href="arranjos.html"> Arranjos </a></font></td>
-               <td> <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font></td>
+               <td> <font color="red"><a href="tiposdeflores.html"> Tipos </a></font></td>
                <td> <font color="red"><a href="maisvendidas.html"> Mais Vendidas </a></font></td>
                <td> <font color="red"><a href="atendimento.html"> Atendimentos</a></font></td>
         </tr></table>
