--- a/tiposdeflores.html
+++ b/tiposdeflores.html
@@ -14,7 +14,7 @@
         <table width="600" bgcolor="">
             <tr>
                 <td>
-                    <font color="red"><a href="home.html"> Home </a></font>
+                    <font color="red"><a href="index.html"> Home </a></font>
                 </td>
                 <td>
                     <font color="red"><a href="promocoes.html"> Promoções</a></font>
@@ -26,7 +26,7 @@
                     <font color="red"><a href="arranjos.html"> Arranjos </a></font>
                 </td>
                 <td>
-                    <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font>
+                    <font color="red"><a href="tiposdeflores.html"> Tipos </a></font>
                 </td>
                 <td>
                     <font color="red"><a href="atendimento.html"> Atendimentos</a></font>
