--- a/tiposdeflores.html
+++ b/tiposdeflores.html
@@ -28,6 +28,9 @@
                 <td>
                     <font color="red"><a href="tiposdeflores.html"> Tipos </a></font>
                 </td>
+                 <td>
+                    <font color="red"><a href="maisvendidas.html"> Mais Vendidas </a></font>
+                </td>
                 <td>
                     <font color="red"><a href="atendimento.html"> Atendimentos</a></font>
                 </td>
