--- a/promocoes.html
+++ b/promocoes.html
@@ -62,6 +62,10 @@
                 <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
                 </br>Tulipas</br>R$ 30,00</br></br>
             </td>
+        <td>
+                <img src="https://media.istockphoto.com/id/178077854/pt/foto/as-margaridas.jpg?s=612x612&w=0&k=20&c=wyE2SfTEeoz0VsT_WPlhoaBoNtOQgmhB81Z2OaxtPsg=" width="200" alt=" " width="20%" height="180">
+                </br>Margaridas</br>R$ 25,00</br></br>
+            </td>
         </tr>
     </table>
 </body>
