--- a/kits.html
+++ b/kits.html
@@ -62,6 +62,10 @@
                 <img src="kit5.jpg" width="200" alt=" " width="20%" height="180">
                 </br>Kit 2 Jacinto</br>R$ 100,00</br>
             </td>
+         <td>
+                <img src="https://media.istockphoto.com/id/952796290/pt/foto/colorful-flowers-in-a-vase-are-beautiful.jpg?s=612x612&w=0&k=20&c=F040BLFi_-roqDQsE-dDBgei7Nby7IQEoPD7Ztuo6oM=" width="200" alt=" " width="20%" height="180">
+                </br>Kit 2 Gardenea</br>R$ 40,00</br>
+            </td>
         </tr>
     </table>
 </body>
