--- a/maisvendidas.html
+++ b/maisvendidas.html
@@ -67,6 +67,11 @@
                 <img src="mais5.jpg" width="200" alt=" " width="20%" height="180">
                 </br>R$10,00</br></br>
             </td>
+        <td>
+                </br>Azaléia: </br></br>
+                <img src="https://media.istockphoto.com/id/520234200/pt/foto/rosa-azal%C3%A9ia-em-uma-panela-isolada-um-branco.jpg?s=612x612&w=0&k=20&c=tuo4e5BveYnxRtXiVefzSg7hFVdfKG6xImXuYIPWvWE=" width="200" alt=" " width="20%" height="180">
+                </br>R$20,00</br></br>
+            </td>
         </tr>
     </table>
 </body>
