--- a/arranjos.html
+++ b/arranjos.html
@@ -11,7 +11,7 @@
 
 <body>
     
-       <img src="arranjos.jpg" width="1000" alt=" " width="20%" height="180">
+        <img src="tipos.jpg" width="1024" alt=" width="20%" height="180">
         <h3></br>
             <table width="600" bgcolor="">
             <tr>
