--- a/maisvendidas.html
+++ b/maisvendidas.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-     <img src="tipos.jpg" width="1024" alt=" width="20%" height="180">
+     <img src="mais.vendidas.jpg" width="1024" alt=" width="20%" height="180">
     <h3></br>
         <table width="600" bgcolor="">
             <tr>
